<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.55"/>

    <TextView
        style="@style/App.TextView.Header"
        android:id="@+id/headerInformation"
        android:text="@string/header_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAbout"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titleReleaseDate"
        android:layout_marginTop="8dp"
        android:text="@string/title_release_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerInformation"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titleMetascore"
        android:layout_marginTop="8dp"
        android:text="@string/title_metascore"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/headerInformation"/>

    <TextView
        style="@style/App.TextView.Body2"
        android:id="@+id/textReleaseDate"
        android:layout_width="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:text="May 18, 2015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleReleaseDate"/>

    <com.google.android.material.chip.Chip
        style="@style/App.Chip.Metacritic"
        android:id="@+id/chipMetacritic"
        android:layout_marginTop="6dp"
        android:text="93"
        android:textColor="@color/colorGreen"
        app:chipStrokeColor="@color/colorGreen"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/titleMetascore"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierDateMetacritic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textReleaseDate, chipMetacritic"
        app:barrierMargin="12dp"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titlePlatforms"
        android:layout_marginTop="12dp"
        android:text="@string/title_platforms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierDateMetacritic"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titleGenres"
        android:layout_marginTop="12dp"
        android:text="@string/title_genres"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/barrierDateMetacritic"/>

    <TextView
        style="@style/App.TextView.Body2"
        android:id="@+id/textPlatforms"
        android:layout_width="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:text="PlayStation 4, Xbox One, PC, Nintendo Switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlePlatforms"
        app:layout_constraintEnd_toStartOf="@id/center"/>

    <TextView
        style="@style/App.TextView.Body2"
        android:id="@+id/textGenres"
        android:layout_width="0dp"
        android:layout_marginTop="6dp"
        android:text="Action, Adventures, RPG"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/titleGenres"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierPlatformsGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="12dp"
        app:constraint_referenced_ids="textPlatforms, textGenres"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titleDeveloper"
        android:layout_marginTop="12dp"
        android:text="@string/title_developer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierPlatformsGenres"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titlePublisher"
        android:layout_marginTop="12dp"
        android:text="@string/title_publisher"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/barrierPlatformsGenres"/>

    <TextView
        style="@style/App.TextView.Body2"
        android:id="@+id/textDeveloper"
        android:layout_width="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:text="CD PROJEKT RED"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleDeveloper"
        app:layout_constraintEnd_toStartOf="@id/center"/>

    <TextView
        style="@style/App.TextView.Body2"
        android:id="@+id/textPublisher"
        android:layout_width="0dp"
        android:layout_marginTop="6dp"
        android:text="CD PROJEKT RED"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/titlePublisher"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierDeveloperPublisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="12dp"
        app:constraint_referenced_ids="textDeveloper, textPublisher"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titleWebsite"
        android:layout_marginTop="12dp"
        android:text="@string/title_website"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierDeveloperPublisher"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titleEsrbRating"
        android:layout_marginTop="12dp"
        android:text="@string/title_esrb_rating"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/barrierDeveloperPublisher"/>

    <TextView
        style="@style/App.TextView.Body2"
        android:id="@+id/textWebsite"
        android:layout_width="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:text="www.thewitcher.com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleWebsite"
        app:layout_constraintEnd_toStartOf="@id/center"/>

    <TextView
        android:id="@+id/textEsrbRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/App.TextAppearance.Body2"
        android:text="17+"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/titleEsrbRating"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierWebsiteEsrbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="12dp"
        app:constraint_referenced_ids="textWebsite, textEsrbRating"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titleLastModified"
        android:layout_marginTop="12dp"
        android:text="@string/title_last_modified"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierWebsiteEsrbRating"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titlePlaytime"
        android:layout_marginTop="12dp"
        android:text="@string/title_playtime"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/barrierWebsiteEsrbRating"/>

    <TextView
        style="@style/App.TextView.Body2"
        android:id="@+id/textLastModified"
        android:layout_width="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:text="Aug 10, 2020"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLastModified"
        app:layout_constraintEnd_toStartOf="@id/center"/>

    <TextView
        style="@style/App.TextView.Body2"
        android:id="@+id/textPlaytime"
        android:layout_width="0dp"
        android:layout_marginTop="6dp"
        android:text="50 Hours"
        app:layout_constraintStart_toStartOf="@id/center"
        app:layout_constraintTop_toBottomOf="@id/titlePlaytime"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierLastModifiedPlaytime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="12dp"
        app:constraint_referenced_ids="textLastModified, textPlaytime"/>

    <TextView
        style="@style/App.TextView.Subtitle"
        android:id="@+id/titleTags"
        android:layout_marginTop="12dp"
        android:text="@string/title_tags"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierLastModifiedPlaytime"/>

    <TextView
        style="@style/App.TextView.Body2"
        android:id="@+id/textTags"
        android:layout_width="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:text="Full controller support, Action RPG, Atmospheric, Choices Matter, Dark, Dark Fantasy, Fantasy, Great Soundtrack, Magic, Mature, Medieval, Multiple Endings, Nudity, Open World, RPG, Sandbox, Singleplayer, Story Rich, Third Person, Controller support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTags"/>
</merge>