<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_margin="16dp"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <TextView
        style="@style/App.TextView.Header"
        android:id="@+id/headerScreenshots"
        android:text="@string/header_screenshots"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hViewStores"/>

    <HorizontalScrollView
        style="@style/App.HorizontalScrollView"
        android:id="@+id/hViewScreenshots"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerScreenshots">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                style="@style/App.CardView.ImageCard"
                android:id="@+id/cardScreenshot1">

                <ImageView
                    style="@style/App.ImageView.Screenshot"
                    android:id="@+id/imgScreenshot1"
                    android:src="@drawable/fragment_game_details_screenshot_1"
                    android:contentDescription="@string/desc_game_screenshot"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/App.CardView.ImageCard"
                android:id="@+id/cardScreenshot2"
                android:layout_marginStart="8dp">

                <ImageView
                    style="@style/App.ImageView.Screenshot"
                    android:id="@+id/imgScreenshot2"
                    android:src="@drawable/fragment_game_details_screenshot_2"
                    android:contentDescription="@string/desc_game_screenshot"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/App.CardView.ImageCard"
                android:id="@+id/cardScreenshot3"
                android:layout_marginStart="8dp">

                <ImageView
                    style="@style/App.ImageView.Screenshot"
                    android:id="@+id/imgScreenshot3"
                    android:src="@drawable/fragment_game_details_screenshot_3"
                    android:contentDescription="@string/desc_game_screenshot"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/App.CardView.ImageCard"
                android:id="@+id/cardScreenshot4"
                android:layout_marginStart="8dp">

                <ImageView
                    style="@style/App.ImageView.Screenshot.Overlay"
                    android:id="@+id/imgScreenshot4"
                    android:src="@drawable/fragment_game_details_screenshot_4"
                    android:contentDescription="@string/desc_game_screenshot"/>

                <Button
                    style="@style/App.Button.TextButton"
                    android:id="@+id/buttonViewAll"
                    android:layout_gravity="center"
                    android:text="@string/button_view_all"/>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </HorizontalScrollView>
</merge>